--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,11 @@
             <artifactId>jquery</artifactId>
             <version>3.1.0</version>
         </dependency>
-
+        <dependency>
+          <groupId>com.vdurmont</groupId>
+          <artifactId>emoji-java</artifactId>
+          <version>3.1.3</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
