--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
           <artifactId>emoji-java</artifactId>
           <version>3.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.2</version>
+        </dependency> 
     </dependencies>
     <build>
         <plugins>
